--- a/src/main/resources/front/index.html
+++ b/src/main/resources/front/index.html
@@ -544,7 +544,7 @@
                   dishFlavor.push(item.dishFlavor)
                 }else{
                       flag = false
-                      Notify({ type: 'warning', message: '请选择'+ item.name });
+                      this.$notify({ type:'warning', message:'请选择'+ item.name});
                 }
               })
               if(flag){
