address & shoppingcart & order

--- a/src/main/resources/backend/index.html
+++ b/src/main/resources/backend/index.html
@@ -149,8 +149,8 @@
                   {
                     id: '6',
                     name: '订单明细',
-                    url: 'page/order/list.html',
-                    icon: 'icon-order'
+                    url: 'page/orders/list.html',
+                    icon: 'icon-orders'
                   }
               //   ],
               // },
